@@ -1,3 +1,11 @@
+Mon Mar  8 15:36:55 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * bin/mpc.pl:
+        * bin/mwc.pl:
+
+          Some platforms have been reported to return undef from
+          $FindBin::RealBin.  In this case, fall back on dirname($0).
+
 Mon Mar  8 13:53:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Atomic_Op_GCC_T.inl:
